# Portable-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.apps.yml  docker-compose.core.yml  docker-compose.override.yml  docker-compose.workers.yml  docker-compose.yaml  docker-compose.yml  init_db.py  pyproject.toml
data/: __init__.py  init_configs.py
data/configs/: base_config.py  callbacks_config.py  database_config.py  google_config.py  llm_config.py  ollama_config.py  openai_config.py  ports_config.py  redis_config.py  tg_config.py  xai_config.py
db/: database.py  database_protocol.py
db/sqlalchemy/: google_crud.py  models.py  session.py  user_crud.py
db/sqlite/: google_crud.py  manager.py  schemas.py  user_crud.py
src/: server.py
src/agents/chat/: __init__.py  base.py  invoker.py
src/agents/llms/: base.py  grok_llm.py  initializer.py  ollama_llm.py  openai_llm.py
src/agents/prompts/: system.py
src/agents/tools/: calendar.py  reminders.py
src/enum/: __init__.py  db.py  timeframe.py
src/exceptions/: __init__.py  base.py  config_exp.py  repo_exp.py  services_exp.py
src/factories/: __init__.py  agents_factory.py  checkpointer_factory.py  middleware_factory.py  repository_factory.py  service.py  tools_factory.py
src/mcp/calendar/: run.py  server.py
src/models/: __init__.py  events.py  google.py  return_message.py  token_model.py  user_model.py  user_response.py
src/servers/: base.py  dependencies.py  google_calendar_api.py
src/servers/calendar/: google_calendar_api.py  server.py
src/services/: __init__.py
src/services/calendar/: auth_service.py  calendar_service.py  creds_manager.py  google_calendar.py  token_service.py
src/services/calendar/mcp/: models.py  run.py  server.py
src/services/calendar/server/: dependencies.py  google_calendar_api.py  run.py
src/services/reminders/mcp/: run.py  server.py
src/services/telegram/bot/: dependencies.py  handlers.py  main.py
src/services/web/: app.py  dependencies.py  main.py
src/services/web/static/: index.html
src/tasks/: celery_app.py  tasks.py
utils/: client_session.py  const.py  helpers.py  metaclasses.py  model_selector.py  preprocessing_func.py  renderers.py  setup_logger.py
