[project]
name = "portableagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "deepagents>=0.4.3",
    "fastapi>=0.128.7",
    "fastmcp>=2.14.5",
    "gcsa>=2.6.0",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langfuse>=3.14.5",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langsmith>=0.7.6",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "sqlalchemy[asyncio]>=2.0.46",
]
